sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:25: error: not found: value fini
   } while(fini !=0)
           ^